--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ShoppingCart
+
 #cấu hình kết nối database
 # DataSource Config
 spring.datasource.url=jdbc:mysql://thanhnhandev.top:3306/ShoppingCart?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
@@ -24,5 +24,6 @@ spring.servlet.multipart.max-request-size=5MB
 #google
 app.passSecret=adgADEI@*%qg633@d5%^7qw97dagatf2#$^*^3242wsa@W
 google.ClientId=295700504694-dp7cam8r4cdjq5ia1mv8qc31448gs0vm.apps.googleusercontent.com
+server.port=${PORT:8080}
 
 
