--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.java</groupId>
 	<artifactId>ShoppingCart</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<description>User management portal - angularJs - spring boot</description>
 	<properties>
 		<java.version>1.8</java.version>
